# Costa-Rican-Household-Poverty-Level-Prediction

./: .gitignore  Logistic Regression-final.ipynb  Logistic Regression.ipynb  Naive_Bayes.ipynb  README.md  Random_Forest.ipynb  best_model.py  best_model_evaluation.ipynb  checkpoint_2.ipynb  checkpoint_2_klo.ipynb  evaluate_classification.py  exploratory_analysis.html  exploratory_analysis.ipynb  exploratory_analysis_Katherine.ipynb  final_kaggle_code.ipynb  knn.ipynb  load_data.py  lob_graphs.ipynb  loops.py  pyproject.toml  regression_results.csv  sample_report.ipynb  var_descriptions.json
Exploratory analysis/: analyze_k.py  checkpoint_2.ipynb  loops.py
Exploratory_analysis/: checkpoint_2.ipynb
ML model testing/: Logistic Regression-final.ipynb  Naive_Bayes.ipynb  Random_Forest.ipynb  knn.ipynb
exploratory_analysis/: analyze_k.py  checkpoint_2.ipynb  exploratory_analysis.ipynb  loops.py
ml_model_testing/: Final_Models.ipynb  Logistic Regression-final.ipynb  Naive_Bayes.ipynb  Random_Forest.ipynb  analyze_k.py  knn.ipynb
