[tool.poetry]
name = "Costa-Rican-Household-Poverty-Level-Prediction CAPP 30254 group"
version = "0.1.0"
description = ""
authors = ["Andrew Dunn, Katherine Dumais, Kathryn Link-Oberstar, Lee-Or Bentovim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8|^3.9|^3.10"
pandas = "^2.0.0"
numpy = "^1.24.2"
sklearn = "^0.0.post4"
statsmodels = "^0.13.5"
matplotlib = "^3.7.1"
imblearn = "^0.0"
